--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,12 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.9"
 langchain = "0.3.0"
-langchain-openai = "0.2.11"
 langgraph = "0.2.56"
 pandas = "^2.1.0"
 numpy = "^1.24.0"
 python-dotenv = "1.0.0"
 matplotlib = "^3.9.2"
+langchain-openai = "^0.2.11"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
